FIx issue creating new customer and address in the same command.
