# ArtisanGemstoneIMS.WebUI/Server/wwwroot/swagger/v1/swagger.json
@@ -933,9 +933,8 @@
           "lastName": {
             "type": "string"
           },
-          "primaryAddressId": {
-            "type": "string",
-            "format": "guid"
+          "primaryAddress": {
+            "$ref": "#/components/schemas/AddressDto"
           },
           "phoneNumber": {
             "type": "string"
