# ArtisanGemstoneIMS.WebUI/Shared/Customers/BaseCustomerDto.cs
@@ -4,7 +4,7 @@ public class BaseCustomerDto
 {
     public string FirstName { get; set; } = string.Empty;
     public string LastName { get; set; } = string.Empty;
-    public Guid PrimaryAddressId { get; set; }
+    public AddressDto PrimaryAddress { get; set; } = new AddressDto();
     public string PhoneNumber { get; set; } = string.Empty;
     public string Email { get; set; } = string.Empty;
 }
